--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.1.0",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
+    "react-daum-postcode": "^3.1.1",
     "react-device-detect": "^2.1.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.20.2",
