--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^1.3.6",
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-query-devtools": "^4.2.3",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-scroll": "^1.8.4",
     "@types/react-slick": "^0.23.10",
     "@types/react-syntax-highlighter": "^13.5.2",
@@ -49,6 +50,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.20.2",
+    "react-infinite-scroller": "^1.2.6",
     "react-redux": "^7.2.0",
     "react-scroll": "^1.8.7",
     "react-select": "^5.2.1",
