--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^1.3.6",
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-query-devtools": "^4.2.3",
+    "@tosspayments/payment-sdk": "^1.2.0",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-scroll": "^1.8.4",
     "@types/react-slick": "^0.23.10",
